апдейт кода в хеадері і мейні

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
       <a href="" lang="en"><span class="">Web</span>Studio</a>
       <nav class="">
         <ul class="">
-          <li class="">Студия</li>
-          <li class="">Портфолио</li>
-          <li class="">Контакты</li>
-          <li class="">Студия</li>
+          <li class=""><a href="" class="">Студия</a></li>
+          <li class=""><a href="" class="">Портфолио</a></li>
+          <li class=""><a href="" class="">Контакты</a></li>
         </ul>
       </nav>
 
@@ -30,25 +29,25 @@
         <button type="button">Заказать услугу</button>
         <ul class="">
           <li class="">
-            <p class="">Внимание к деталям</p>
+            <h2 class="">Внимание к деталям</h2>
             <p class="">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li class="">
-            <p class="">Пунктуальность</p>
+            <h2 class="">Пунктуальность</h2>
             <p class="">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li class="">
-            <p class="">Планирование</p>
+            <h2 class="">Планирование</h2>
             <p class="">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li class="">
-            <p class="">Современные технологии</p>
+            <h2 class="">Современные технологии</h2>
             <p class="">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
