--- a/index.html
+++ b/index.html
@@ -24,36 +24,39 @@
     </header>
 
     <main class="">
+      <!-- Наши преимущества -->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
         <ul class="">
           <li class="">
-            <h2 class="">Внимание к деталям</h2>
+            <h3 class="">Внимание к деталям</h3>
             <p class="">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li class="">
-            <h2 class="">Пунктуальность</h2>
+            <h3 class="">Пунктуальность</h3>
             <p class="">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li class="">
-            <h2 class="">Планирование</h2>
+            <h3 class="">Планирование</h3>
             <p class="">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li class="">
-            <h2 class="">Современные технологии</h2>
+            <h3 class="">Современные технологии</h3>
             <p class="">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
         </ul>
-
+      </section>
+      <!-- Чем мы занимаемся -->
+      <section>
         <h2 class="">Чем мы занимаемся</h2>
         <ul class="">
           <li class="">
@@ -85,8 +88,9 @@
           </li>
         </ul>
       </section>
+      <!-- Наша команда -->
       <section class="">
-        <h3 class="class">Наша команда</h3>
+        <h2 class="class">Наша команда</h2>
         <ul class="">
           <li class="">
             <img
