--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
     <main class="">
       <!-- Наши преимущества -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="">
+        <h1 class="">Эффективные решения для вашего бизнеса</h1>
+        <button class="" type="button">Заказать услугу</button>
+      </section class="">
+      <section >
+
         <ul class="">
           <li class="">
             <h3 class="">Внимание к деталям</h3>
@@ -56,7 +59,7 @@
         </ul>
       </section>
       <!-- Чем мы занимаемся -->
-      <section>
+      <section class="">
         <h2 class="">Чем мы занимаемся</h2>
         <ul class="">
           <li class="">
@@ -144,8 +147,8 @@
     <footer class="">
       <a href="" lang="en"><span class="">Web</span>Studio</a>
       <address class="">
+        <p class="">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="">
-          <li class="">г. Киев, пр-т Леси Украинки, 26</li>
           <li class=""><a href="mailto:info@example.com">info@example.com</a></li>
           <li class=""><a href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
