--- a/index.html
+++ b/index.html
@@ -7,84 +7,71 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header class="">
-      <a href="" lang="en"><span class="">Web</span>Studio</a>
-      <nav class="">
-        <ul class="">
-          <li class=""><a href="" class="">Студия</a></li>
-          <li class=""><a href="" class="">Портфолио</a></li>
-          <li class=""><a href="" class="">Контакты</a></li>
+    <header>
+      <a href="" lang="en"><span>Web</span>Studio</a>
+      <nav>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul class="">
-        <li class=""><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
-        <li class=""><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
-    <main class="">
+    <main>
       <!-- Наши преимущества -->
-      <section class="">
-        <h1 class="">Эффективные решения для вашего бизнеса</h1>
-        <button class="" type="button">Заказать услугу</button>
-      </section class="">
-      <section >
-
-        <ul class="">
-          <li class="">
-            <h3 class="">Внимание к деталям</h3>
-            <p class="">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
-          <li class="">
-            <h3 class="">Пунктуальность</h3>
-            <p class="">
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li class="">
-            <h3 class="">Планирование</h3>
-            <p class="">
+          <li>
+            <h3>Планирование</h3>
+            <p>
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li class="">
-            <h3 class="">Современные технологии</h3>
-            <p class="">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
       <!-- Чем мы занимаемся -->
-      <section class="">
-        <h2 class="">Чем мы занимаемся</h2>
-        <ul class="">
-          <li class="">
-            <img
-              class=""
-              width="370"
-              height="290"
-              src="./photo/img.jpg"
-              alt="Разработчик пишет код"
-            />
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img width="370" height="290" src="./photo/img.jpg" alt="Разработчик пишет код" />
           </li>
-          <li class="">
+          <li>
             <img
               width="370"
               height="290"
-              class=""
               src="./photo/box2.jpg"
               alt="Человек держит телефон в руке смотря в ноутбук с фотографиями телефонов"
             />
           </li>
-          <li class="">
+          <li>
             <img
               width="370"
               height="290"
-              class=""
               src="./photo/box3.jpg"
               alt="Человек выбирает цвет на планшете"
             />
@@ -92,65 +79,41 @@
         </ul>
       </section>
       <!-- Наша команда -->
-      <section class="">
+      <section>
         <h2 class="class">Наша команда</h2>
-        <ul class="">
-          <li class="">
-            <img
-              class=""
-              width="270"
-              height="260"
-              src="./photo/img-0.jpg"
-              alt="Участник команды, мужчина"
-            />
+        <ul>
+          <li>
+            <img width="270" height="260" src="./photo/img-0.jpg" alt="Участник команды, мужчина" />
 
-            <h3 class="">Игорь Демьяненко</h3>
-            <p class="" lang="en">Product Designer</p>
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
-          <li class="">
-            <img
-              class=""
-              width="270"
-              height="260"
-              src="./photo/img-1.jpg"
-              alt="Участник команды, женщина"
-            />
+          <li>
+            <img width="270" height="260" src="./photo/img-1.jpg" alt="Участник команды, женщина" />
 
-            <h3 class="">Ольга Репина</h3>
-            <p class="" lang="en">Frontend Developer</p>
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
-          <li class="">
-            <img
-              class=""
-              width="270"
-              height="260"
-              src="./photo/img-2.jpg"
-              alt="Участник команды, мужчина"
-            />
-            <h3 class="">Николай Тарасов</h3>
-            <p class="" lang="en">Marketing</p>
+          <li>
+            <img width="270" height="260" src="./photo/img-2.jpg" alt="Участник команды, мужчина" />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
           </li>
-          <li class="">
-            <img
-              class=""
-              width="270"
-              height="260"
-              src="./photo/img-3.jpg"
-              alt="Участник команды, мужчина"
-            />
-            <h3 class="">Михаил Ермаков</h3>
-            <p class="" lang="en">UI Designer</p>
+          <li>
+            <img width="270" height="260" src="./photo/img-3.jpg" alt="Участник команды, мужчина" />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer class="">
-      <a href="" lang="en"><span class="">Web</span>Studio</a>
-      <address class="">
-        <p class="">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="">
-          <li class=""><a href="mailto:info@example.com">info@example.com</a></li>
-          <li class=""><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+    <footer>
+      <a href="" lang="en"><span>Web</span>Studio</a>
+      <address>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
